src/styles/abstracts/_mixins.scss
@use 'sass:math';
@use 'variables' as vars;


@mixin fluid-text($min: 16, $max: 48) {
  $maxViewportWidth: 1440;
  $minViewportWidth: 320;

  $maxSize: math.div($max, 16);
  $minSize: math.div($min, 16);
  $maxWidth: math.div($maxViewportWidth, 16);
  $minWidth: math.div($minViewportWidth, 16);

  $slope: math.div(($maxSize - $minSize), ($maxWidth - $minWidth));
  $yAxisIntersection: -$minWidth * $slope + $minSize;

  font-size: clamp(#{$minSize * 1rem},
    calc(#{$yAxisIntersection * 1rem} + #{$slope * 100vw}),
    #{$maxSize * 1rem});
}

@mixin scrollbar($width: 6px, $thumb-color: vars.$color-gray-form, $track-margin: 0px) {
  scrollbar-width: thin;
  scrollbar-color: #{$thumb-color} transparent;

  &::-webkit-scrollbar {
    width: $width;
  }

  &::-webkit-scrollbar-track {
    background: transparent;
    border-radius: 10px;
    @if $track-margin != 0px {
      margin-block: $track-margin;
    }
  }

  &::-webkit-scrollbar-thumb {
    background-color: $thumb-color;
    border-radius: 10px;
  }
}

@mixin flex($flex-direction: row, $flex-wrap: wrap, $justify-content: flex-start, $align-items: stretch) {
  display: flex;
  flex-direction: $flex-direction;
  flex-wrap: $flex-wrap;
  justify-content: $justify-content;
  align-items: $align-items;
}

@mixin maxContent {
  padding-left: calc((100% - 1440px) / 2);
  padding-right: calc((100% - 1440px) / 2);
}

@mixin maxWidth {
  max-width: 1440px;
  width: 100%;
  box-sizing: border-box;
}

@mixin custom-material-dialog($radius: 30px) {
  .mat-mdc-dialog-container {
    --mdc-dialog-container-shape: #{$radius};
    --mdc-dialog-container-color: white;

    .mdc-dialog__surface {
      padding: 0;
      overflow: hidden;
      background-color: transparent;
      border-radius: inherit;
    }
  }
}

/* #region responsive-mixins */

// Up to 370px
@mixin mobile-sm {
  @media (max-width: #{vars.$breakpoint-mobile-sm}) {
    @content;
  }
}

// Up to 480px
@mixin mobile-md {
  @media (max-width: #{vars.$breakpoint-mobile}) {
    @content;
  }
}

// Up to 768px (Mobile/Large-Mobile range)
@mixin mobile {
  @media (max-width: #{vars.$breakpoint-tablet}) {
    @content;
  }
}

// From 769px to 1024px (Tablet Landscape)
@mixin tablet {
  @media (min-width: #{vars.$breakpoint-tablet + 1px}) and (max-width: #{vars.$breakpoint-desktop}) {
    @content;
  }
}

// Up to 1024px (Mobile and Tablet)
@mixin tablet-lg {
  @media (max-width: #{vars.$breakpoint-desktop}) {
    @content;
  }
}

// Up to 1200px (Large Tablet / Small Laptop)
@mixin tablet-xl {
  @media (max-width: #{vars.$breakpoint-tablet-lg}) {
    @content;
  }
}

// From 1025px (Desktop)
@mixin desktop {
  @media (min-width: #{vars.$breakpoint-desktop + 1px}) {
    @content;
  }
}

// From 1441px (Large Desktop)
@mixin large-desktop {
  @media (min-width: #{vars.$breakpoint-large + 1px}) {
    @content;
  }
}

/* #endregion */

